heroku listo actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Proyecto</title>
-  </head>
-  <body>
-    <h1>Programa corriendo en Heroku</h1>
-  </body>
-</html>
+<head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="icon" href="/favicon.ico">
+<title>Sistema de Compraventa: Fullstack</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><link href="/css/chunk-0737d363.0f343f03.css" rel="prefetch">
+<link href="css/chunk-1e8c4b18.bef1c6a3.css" rel="prefetch">
+<link href="css/chunk-20c2d344.749f0f90.css" rel="prefetch">
+<link href="css/chunk-26c1005c.9ea7b5c7.css" rel="prefetch">
+<link href="css/chunk-3633fa66.e4733037.css" rel="prefetch">
+<link href="css/chunk-41ddb212.c2aa0753.css" rel="prefetch">
+<link href="css/chunk-540cab86.256934d9.css" rel="prefetch">
+<link href="css/chunk-5acd3e17.1891d92f.css" rel="prefetch">
+<link href="css/chunk-72e94a12.e8279291.css" rel="prefetch">
+<link href="css/chunk-a4db14c6.23ad1975.css" rel="prefetch">
+<link href="css/chunk-a57cc580.518e54d1.css" rel="prefetch">
+<link href="css/chunk-a7525244.de464dc4.css" rel="prefetch">
+<link href="css/chunk-dc80f2cc.1458ee72.css" rel="prefetch">
+<link href="css/chunk-df801c06.6e139b37.css" rel="prefetch">
+<link href="js/chunk-0737d363.909b8e42.js" rel="prefetch">
+<link href="js/chunk-1e8c4b18.96f83fa3.js" rel="prefetch">
+<link href="js/chunk-20c2d344.86a8a761.js" rel="prefetch">
+<link href="js/chunk-26c1005c.3ec5caeb.js" rel="prefetch">
+<link href="js/chunk-2d216214.4700c1d8.js" rel="prefetch">
+<link href="js/chunk-2d216257.256ee085.js" rel="prefetch">
+<link href="js/chunk-2d22d746.c22a15b1.js" rel="prefetch">
+<link href="js/chunk-3633fa66.7c76b247.js" rel="prefetch">
+<link href="js/chunk-4125b9f2.a300470b.js" rel="prefetch">
+<link href="js/chunk-41ddb212.f27a8feb.js" rel="prefetch">
+<link href="js/chunk-461b141f.1bf54f36.js" rel="prefetch">
+<link href="js/chunk-540cab86.8000b092.js" rel="prefetch">
+<link href="js/chunk-5acd3e17.6441f5de.js" rel="prefetch">
+<link href="js/chunk-72e94a12.bfd55fe3.js" rel="prefetch">
+<link href="js/chunk-a4db14c6.5de7dd15.js" rel="prefetch">
+<link href="js/chunk-a57cc580.cea0ce62.js" rel="prefetch">
+<link href="js/chunk-a7525244.cdae5ddd.js" rel="prefetch">
+<link href="js/chunk-dc80f2cc.a52492f5.js" rel="prefetch">
+<link href="js/chunk-df801c06.c4e4124c.js" rel="prefetch">
+<link href="css/chunk-vendors.cb76a5f2.css" rel="preload" as="style">
+<link href="js/app.253bcb53.js" rel="preload" as="script">
+<link href="js/chunk-vendors.ffc6ace2.js" rel="preload" as="script">
+<link href="css/chunk-vendors.cb76a5f2.css" rel="stylesheet">
+</head><body><noscript><strong>We're sorry but proyecto_tienda doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.ffc6ace2.js"></script><script src="/js/app.253bcb53.js"></script>
+</body></html>
